# bionmf

./: .gitignore  LICENSE  README.md  pyproject.toml
bionmf/: utils.py
src/bionmf/: __init__.py  nmf.py  utils.py
tests/: test_utils.py
