[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[project]
name = "bionmf"
version = "0.0.4"
dependencies = [
    "scanpy",
    "scikit-learn",
    "multiprocess",
    "pytest",
    "fastcluster",
    "altair",
    "vl-convert-python"
]
description = "NMF solver for gene programs."
readme = "README.md"
